Fix issue with overflowing form element

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .bottom {
@@ -104,8 +105,7 @@ img {
 
 form {
   margin-top: 16px;
-  margin-left: 64px;
-  width: 100%;
+  width: calc(100% - 64px);
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -116,6 +116,7 @@ form {
 .second-column {
   width: max(45%,200px);
 }
+
 
 .form-row {
   font-size: 0.8rem;
@@ -159,7 +160,7 @@ button {
   border-radius: 4px;
 }
 
-@media (max-width: 615px){
+@media (max-width: 711px){
     button {
       top: 300px
     }
@@ -167,7 +168,7 @@ button {
       background-color:  rgb(255, 255, 255);
     }
     input {
-      width: 180px;
+      width: 250px;
     
   }
 }
